# tauri-types

./: Cargo.toml  README.md
src/: command.rs  file.rs  invoke.rs  lib.rs  ty.rs
tauri-types-test/: Cargo.toml
tauri-types-test/src/: main.rs
