[package]
name = "tauri-types"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[workspace]
members = ["tauri-types-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }
