[package]
name = "tauri-types"
version = "0.1.0"
edition = "2021"
authors = ["Maki325"]
description = "Type generating macros for Tauri apps"
repository = "https://github.com/Maki325/tauri-types"
homepage = "https://github.com/Maki325/tauri-types"
license = "Apache-2.0 OR MIT"
keywords = ["tauri", "tauri-app", "tauri-types", "tauri-type-macros"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }
